syntax = "proto3";
package ru.aaf.finshop.proto;

option java_multiple_files = true;

message ProfileProto {
    message Client {
        int64 id = 1;
        string name = 2;
        optional string passport = 3;
    }
    int64 id = 1;
    optional string name = 2;
    optional Client client = 3;
    bool authorized = 4;
}


message NameProto {
    string name = 1;
}

message IdProto {
    int64 id = 1;
}

message EmptyProto {}

message LoanClaimProto {
    int64 id = 1;
    int64 clientId = 2;
    uint32 status = 3;
    uint32 period = 4;
    int32 amount = 5;
}

service RemoteService {
    rpc getProfileByName(NameProto) returns (IdProto);
    rpc getProfileById(IdProto) returns (ProfileProto);
    rpc saveProfile(ProfileProto) returns (ProfileProto);
    rpc saveClaim(LoanClaimProto) returns (LoanClaimProto);
}
